--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ crate-type = ["cdylib", "rlib"]
 [[example]]
 name = "basic"
 path = "examples/basic.rs"
+required-features = ["python"]
 
 [[bench]]
 name = "langgraph_benchmark"
