--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,20 +1,16 @@
-[build-system]
-requires = ["setuptools>=40", "wheel", "setuptools-rust>=1.0.0"]
-build-backend = "setuptools.build_meta"
-
-[project]
+[tool.poetry]
 name = "langgraph-rs"
 version = "0.1.0"
 description = "High-performance Rust implementation of LangGraph components"
-authors = [{name = "LangGraph Team", email = "team@langchain.dev"}]
-license = {text = "MIT"}
+authors = ["LangGraph Team <team@langchain.dev>"]
+license = "MIT"
 readme = "README.md"
-requires-python = ">=3.8"
-dependencies = [
-    "setuptools-rust>=1.0.0",
-]
+homepage = "https://github.com/langchain-ai/langgraph"
+repository = "https://github.com/langchain-ai/langgraph-rs"
+documentation = "https://github.com/langchain-ai/langgraph-rs/tree/main/docs"
+keywords = ["langgraph", "rust", "performance", "graph", "ai"]
 classifiers = [
-    "Development Status :: 3 - Alpha",
+    "Development Status :: 4 - Beta",
     "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
@@ -28,39 +24,181 @@ classifiers = [
     "Topic :: Software Development :: Libraries :: Python Modules",
     "Topic :: Scientific/Engineering :: Artificial Intelligence",
 ]
-
-[project.optional-dependencies]
-dev = [
-    "pytest>=6.0",
-    "pytest-benchmark>=3.0",
-    "criterion>=0.5",
+packages = [
+    { include = "langgraph_rs" }
+]
+include = [
+    "Cargo.toml",
+    "src/**/*.rs",
+    "README.md",
+    "LICENSE",
 ]
 
-[project.urls]
-Homepage = "https://github.com/langchain-ai/langgraph"
-Repository = "https://github.com/langchain-ai/langgraph"
-Documentation = "https://langchain-ai.github.io/langgraph/"
+[tool.poetry.dependencies]
+python = "^3.8"
+typing-extensions = "^4.8.0"
 
-[tool.setuptools.packages.find]
-where = ["python"]
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.4.0"
+pytest-cov = "^4.1.0"
+pytest-benchmark = "^4.0.0"
+pytest-asyncio = "^0.21.0"
+black = "^23.0.0"
+isort = "^5.12.0"
+flake8 = "^6.0.0"
+mypy = "^1.5.0"
+ruff = "^0.1.0"
 
-[tool.setuptools.package-dir]
-"" = "python"
+[tool.poetry.group.build.dependencies]
+maturin = "^1.3.0"
 
-[tool.setuptools_rust]
+[tool.poetry.group.docs.dependencies]
+sphinx = "^7.0.0"
+sphinx-rtd-theme = "^1.3.0"
+sphinx-autodoc-typehints = "^1.24.0"
+
+[tool.poetry.group.test]
+optional = true
+
+[tool.poetry.group.test.dependencies]
+langgraph = "^0.1.0"
+
+[build-system]
+requires = ["maturin>=1.3,<2.0"]
+build-backend = "maturin"
+
+[tool.maturin]
+python-source = "."
+module-name = "langgraph_rs.langgraph_rs"
 bindings = "pyo3"
+features = ["python"]
 strip = true
 
-[tool.pytest.ini_options]
-addopts = "-v"
-testpaths = ["tests"]
+[tool.black]
+line-length = 88
+target-version = ['py38']
+include = '\.pyi?$'
+exclude = '''
+/(
+    \.eggs
+  | \.git
+  | \.hg
+  | \.mypy_cache
+  | \.tox
+  | \.venv
+  | _build
+  | buck-out
+  | build
+  | dist
+  | target
+)/
+'''
+
+[tool.isort]
+profile = "black"
+line_length = 88
+skip_gitignore = true
 
 [tool.ruff]
 line-length = 88
 target-version = "py38"
+select = [
+    "E",   # pycodestyle errors
+    "W",   # pycodestyle warnings
+    "F",   # pyflakes
+    "I",   # isort
+    "B",   # flake8-bugbear
+    "C4",  # flake8-comprehensions
+    "UP",  # pyupgrade
+]
+ignore = ["E501", "B008", "B905"]
+exclude = [
+    ".bzr",
+    ".direnv",
+    ".eggs",
+    ".git",
+    ".hg",
+    ".mypy_cache",
+    ".nox",
+    ".pants.d",
+    ".ruff_cache",
+    ".svn",
+    ".tox",
+    ".venv",
+    "__pypackages__",
+    "_build",
+    "buck-out",
+    "build",
+    "dist",
+    "node_modules",
+    "venv",
+    "target",
+]
 
 [tool.mypy]
 python_version = "3.8"
 warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = true
+ignore_missing_imports = true
+no_implicit_reexport = true
+strict_equality = true
+strict_concatenate = true
+check_untyped_defs = true
+disallow_any_generics = true
+disallow_incomplete_defs = true
+disallow_subclassing_any = true
+disallow_untyped_calls = true
+disallow_untyped_decorators = true
+no_implicit_optional = true
+warn_redundant_casts = true
+warn_unused_ignores = true
+warn_unreachable = true
+
+[tool.pytest.ini_options]
+minversion = "7.0"
+addopts = [
+    "-ra",
+    "--strict-markers",
+    "--strict-config",
+    "-v",
+    "--cov=langgraph_rs",
+    "--cov-report=term-missing",
+    "--cov-report=html",
+    "--cov-report=xml",
+]
+testpaths = ["tests"]
+python_files = ["test_*.py", "*_test.py"]
+python_functions = ["test_*"]
+python_classes = ["Test*"]
+markers = [
+    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
+    "integration: marks tests as integration tests",
+    "benchmark: marks tests as benchmark tests",
+]
+
+[tool.coverage.run]
+branch = true
+source = ["langgraph_rs"]
+omit = ["*/tests/*", "*/test_*.py"]
+
+[tool.coverage.report]
+precision = 2
+show_missing = true
+skip_covered = false
+exclude_lines = [
+    "pragma: no cover",
+    "def __repr__",
+    "def __str__",
+    "raise NotImplementedError",
+    "if __name__ == .__main__.:",
+    "if TYPE_CHECKING:",
+    "@abstractmethod",
+    "@abc.abstractmethod",
+]
+
+[tool.coverage.html]
+directory = "htmlcov"
+
+[tool.poetry.scripts]
+langgraph-rs = "langgraph_rs.cli:main"
