--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,23 +31,25 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 thiserror = "1.0"
 petgraph = "0.6"
-sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "postgres", "mysql", "chrono", "uuid"], optional = true }
 chrono = { version = "0.4", features = ["serde"] }
 uuid = { version = "1.0", features = ["v4", "serde", "js"] }
 async-trait = "0.1"
 rmp-serde = { version = "1.0", optional = true }
 flate2 = { version = "1.0", optional = true }
 num_cpus = "1.0"
+rusqlite = { version = "0.31", features = ["bundled"], optional = true }
+zstd = { version = "0.13", optional = true }
+lz4 = { version = "1.24", optional = true }
 
 [dev-dependencies]
 tokio-test = "0.4"
 criterion = "0.5"
 
 [features]
-default = ["python"]
+default = ["python", "msgpack", "sqlite", "compression-zstd"]
 python = ["pyo3"]
 msgpack = ["rmp-serde"]
 compression = ["flate2"]
-checkpoint-postgres = ["sqlx", "sqlx/runtime-tokio-rustls", "sqlx/postgres"]
-checkpoint-mysql = ["sqlx", "sqlx/runtime-tokio-rustls", "sqlx/mysql"]
-checkpoint-sqlite = ["sqlx", "sqlx/runtime-tokio-rustls", "sqlx/sqlite"]
+compression-zstd = ["zstd"]
+compression-lz4 = ["lz4"]
+sqlite = ["rusqlite"]
