--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,75 +1,61 @@
-[tool.poetry]
+[project]
 name = "fast-langgraph"
 version = "0.1.0"
 description = "High-performance Rust implementation of LangGraph components"
-authors = ["Neul Labs <hello@neul.ai>"]
-license = "MIT"
+authors = [{ name = "Neul Labs", email = "hello@neul.ai" }]
+license = { text = "MIT" }
 readme = "README.md"
-homepage = "https://github.com/neul-labs/fast-langgraph"
-repository = "https://github.com/neul-labs/fast-langgraph"
-documentation = "https://github.com/neul-labs/fast-langgraph/tree/main/docs"
+requires-python = ">=3.9"
 keywords = ["langgraph", "rust", "performance", "graph", "ai", "fast"]
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
     "Programming Language :: Rust",
     "Operating System :: OS Independent",
     "Topic :: Software Development :: Libraries :: Python Modules",
     "Topic :: Scientific/Engineering :: Artificial Intelligence",
 ]
-packages = [
-    { include = "fast_langgraph" }
-]
-include = [
-    "Cargo.toml",
-    "src/**/*.rs",
-    "README.md",
-    "LICENSE",
+dependencies = [
+    "typing-extensions>=4.8.0",
 ]
 
-[tool.poetry.dependencies]
-python = "^3.9"
-typing-extensions = "^4.8.0"
+[project.urls]
+Homepage = "https://github.com/neul-labs/fast-langgraph"
+Repository = "https://github.com/neul-labs/fast-langgraph"
+Documentation = "https://github.com/neul-labs/fast-langgraph/tree/main/docs"
 
-[tool.poetry.group.dev.dependencies]
-pytest = "^7.4.0"
-pytest-cov = "^4.1.0"
-pytest-benchmark = "^4.0.0"
-pytest-asyncio = "^0.21.0"
-black = "^23.0.0"
-isort = "^5.12.0"
-flake8 = "^6.0.0"
-mypy = "^1.5.0"
-ruff = "^0.1.0"
-
-[tool.poetry.group.build.dependencies]
-maturin = "^1.3.0"
-
-[tool.poetry.group.docs.dependencies]
-sphinx = "^7.0.0"
-sphinx-rtd-theme = "^1.3.0"
-sphinx-autodoc-typehints = "^1.24.0"
-
-[tool.poetry.group.test]
-optional = true
-
-[tool.poetry.group.test.dependencies]
-langgraph = "^0.1.0"
-
-[tool.poetry.group.integration]
-optional = true
-
-[tool.poetry.group.integration.dependencies]
-langgraph = "^0.1.0"
-langchain-core = "^0.2.0"
-httpx = "^0.25.0"
+[project.optional-dependencies]
+dev = [
+    "pytest>=7.4.0",
+    "pytest-cov>=4.1.0",
+    "pytest-benchmark>=4.0.0",
+    "pytest-asyncio>=0.21.0",
+    "black>=23.0.0",
+    "isort>=5.12.0",
+    "mypy>=1.5.0",
+    "ruff>=0.1.0",
+    "maturin>=1.3.0",
+]
+docs = [
+    "sphinx>=7.0.0",
+    "sphinx-rtd-theme>=1.3.0",
+    "sphinx-autodoc-typehints>=1.24.0",
+]
+test = [
+    "langgraph>=0.1.0",
+]
+integration = [
+    "langgraph>=0.1.0",
+    "langchain-core>=0.2.0",
+    "httpx>=0.25.0",
+]
 
 [build-system]
 requires = ["maturin>=1.3,<2.0"]
@@ -82,9 +68,22 @@ bindings = "pyo3"
 features = ["python"]
 strip = true
 
+[tool.uv]
+dev-dependencies = [
+    "pytest>=7.4.0",
+    "pytest-cov>=4.1.0",
+    "pytest-benchmark>=4.0.0",
+    "pytest-asyncio>=0.21.0",
+    "black>=23.0.0",
+    "isort>=5.12.0",
+    "mypy>=1.5.0",
+    "ruff>=0.1.0",
+    "maturin>=1.3.0",
+]
+
 [tool.black]
 line-length = 88
-target-version = ['py38']
+target-version = ['py39']
 include = '\.pyi?$'
 exclude = '''
 /(
@@ -109,7 +108,9 @@ skip_gitignore = true
 
 [tool.ruff]
 line-length = 88
-target-version = "py38"
+target-version = "py39"
+
+[tool.ruff.lint]
 select = [
     "E",   # pycodestyle errors
     "W",   # pycodestyle warnings
@@ -120,31 +121,12 @@ select = [
     "UP",  # pyupgrade
 ]
 ignore = ["E501", "B008", "B905"]
-exclude = [
-    ".bzr",
-    ".direnv",
-    ".eggs",
-    ".git",
-    ".hg",
-    ".mypy_cache",
-    ".nox",
-    ".pants.d",
-    ".ruff_cache",
-    ".svn",
-    ".tox",
-    ".venv",
-    "__pypackages__",
-    "_build",
-    "buck-out",
-    "build",
-    "dist",
-    "node_modules",
-    "venv",
-    "target",
-]
+
+[tool.ruff.lint.per-file-ignores]
+"__init__.py" = ["F401"]
 
 [tool.mypy]
-python_version = "3.8"
+python_version = "3.9"
 warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = true
