--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,12 +12,8 @@ env:
 
 jobs:
   rust:
-    name: Rust (${{ matrix.os }})
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+    name: Rust
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
@@ -36,11 +32,8 @@ jobs:
       - name: Clippy
         run: cargo clippy -- -D warnings
 
-      - name: Run tests
-        run: cargo test --verbose
-
-      - name: Run tests (no default features)
-        run: cargo test --no-default-features --verbose
+      - name: Build
+        run: cargo build --verbose
 
   python:
     name: Python
@@ -55,7 +48,7 @@ jobs:
           enable-cache: true
 
       - name: Set up Python
-        run: uv python install ${{ matrix.python-version }}
+        run: uv python install 3.12
 
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
@@ -69,38 +62,12 @@ jobs:
       - name: Build extension
         run: uv run maturin develop --release
 
+      - name: Check formatting (black)
+        run: uv run black --check fast_langgraph/ tests/
+
+      - name: Lint (ruff)
+        run: uv run ruff check fast_langgraph/ tests/
+
       - name: Run tests
         run: uv run pytest tests/ -v
 
-  coverage:
-    name: Coverage
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Install Rust
-        uses: dtolnay/rust-toolchain@stable
-
-      - name: Cache Rust
-        uses: Swatinem/rust-cache@v2
-
-      - name: Cache tarpaulin
-        uses: actions/cache@v4
-        with:
-          path: ~/.cargo/bin/cargo-tarpaulin
-          key: tarpaulin-${{ runner.os }}-v0.27
-
-      - name: Install tarpaulin
-        run: |
-          if ! command -v cargo-tarpaulin &> /dev/null; then
-            cargo install cargo-tarpaulin
-          fi
-
-      - name: Generate coverage
-        run: cargo tarpaulin --out Xml --verbose
-
-      - name: Upload to Codecov
-        uses: codecov/codecov-action@v4
-        with:
-          files: ./cobertura.xml
-          fail_ci_if_error: false
