--- a/pyproject.toml
+++ b/pyproject.toml
@@ -120,10 +120,20 @@ select = [
     "C4",  # flake8-comprehensions
     "UP",  # pyupgrade
 ]
-ignore = ["E501", "B008", "B905"]
+ignore = [
+    "E501",   # line too long
+    "B008",   # function call in default argument
+    "B905",   # zip without explicit strict
+    "UP006",  # use dict instead of Dict for type annotation
+    "UP035",  # deprecated typing imports (Dict -> dict, etc.)
+    "B028",   # stacklevel in warnings
+    "B007",   # loop control variable not used within loop body
+    "C416",   # unnecessary list comprehension
+]
 
 [tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["F401"]
+"tests/*" = ["F401", "F841", "B007"]  # unused imports/vars, loop control var not used
 
 [tool.mypy]
 python_version = "3.9"
