--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,9 +44,10 @@ dev = [
     "maturin>=1.3.0",
 ]
 docs = [
-    "sphinx>=7.0.0",
-    "sphinx-rtd-theme>=1.3.0",
-    "sphinx-autodoc-typehints>=1.24.0",
+    "mkdocs>=1.5.0",
+    "mkdocs-material>=9.5.0",
+    "mkdocs-autorefs>=0.5.0",
+    "pymdown-extensions>=10.0",
 ]
 test = [
     "langgraph>=0.1.0",
