--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,3 +71,71 @@ jobs:
       - name: Run tests
         run: uv run pytest tests/ -v
 
+  trigger-publish:
+    name: Trigger publish workflow
+    runs-on: ubuntu-latest
+    needs: [rust, python]
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    permissions:
+      actions: write
+      contents: read
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Detect Cargo version change
+        id: cargo_version
+        env:
+          BEFORE_SHA: ${{ github.event.before }}
+        run: |
+          CURRENT_VERSION=$(sed -n 's/^version = "\(.*\)"/\1/p' Cargo.toml | head -n 1)
+          if [ -z "$CURRENT_VERSION" ]; then
+            echo "changed=false" >> "$GITHUB_OUTPUT"
+            exit 0
+          fi
+
+          BEFORE_REF="${BEFORE_SHA}"
+          if [ -z "$BEFORE_REF" ] || ! git cat-file -e "${BEFORE_REF}^{commit}" 2>/dev/null; then
+            echo "changed=false" >> "$GITHUB_OUTPUT"
+            exit 0
+          fi
+
+          if ! git show "${BEFORE_REF}:Cargo.toml" > /tmp/previous_cargo.toml 2>/dev/null; then
+            echo "changed=false" >> "$GITHUB_OUTPUT"
+            exit 0
+          fi
+
+          PREVIOUS_VERSION=$(sed -n 's/^version = "\(.*\)"/\1/p' /tmp/previous_cargo.toml | head -n 1)
+          if [ -z "$PREVIOUS_VERSION" ]; then
+            echo "changed=false" >> "$GITHUB_OUTPUT"
+            exit 0
+          fi
+
+          if [ "$PREVIOUS_VERSION" != "$CURRENT_VERSION" ]; then
+            echo "changed=true" >> "$GITHUB_OUTPUT"
+            echo "previous=$PREVIOUS_VERSION" >> "$GITHUB_OUTPUT"
+            echo "current=$CURRENT_VERSION" >> "$GITHUB_OUTPUT"
+          else
+            echo "changed=false" >> "$GITHUB_OUTPUT"
+          fi
+
+      - name: Trigger publish workflow
+        if: steps.cargo_version.outputs.changed == 'true'
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          REF_NAME: ${{ github.ref_name }}
+          REPO: ${{ github.repository }}
+          PREVIOUS_VERSION: ${{ steps.cargo_version.outputs.previous }}
+          CURRENT_VERSION: ${{ steps.cargo_version.outputs.current }}
+        run: |
+          echo "Cargo.toml version changed from ${PREVIOUS_VERSION} to ${CURRENT_VERSION}. Triggering publish workflow."
+          cat > body.json <<EOF
+{"ref":"$REF_NAME","inputs":{"publish_to_pypi":"true"}}
+EOF
+          curl -sSf -X POST \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer $GH_TOKEN" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            https://api.github.com/repos/$REPO/actions/workflows/publish.yml/dispatches \
+            -d @body.json
