--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,10 +3,11 @@ name = "fast-langgraph"
 version = "0.1.13"
 edition = "2021"
 description = "High-performance Rust implementation of LangGraph components"
+authors = ["Dipankar Sarkar <me@dipankar.name>"]
 license = "MIT"
 repository = "https://github.com/neul-labs/fast-langgraph"
 homepage = "https://github.com/neul-labs/fast-langgraph"
-documentation = "https://github.com/neul-labs/fast-langgraph"
+documentation = "https://github.com/neul-labs/fast-langgraph/tree/main/documentation/docs"
 readme = "README.md"
 keywords = ["langgraph", "rust", "ai", "graph", "performance"]
 categories = ["science", "algorithms", "data-structures"]
