--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,8 @@
 name = "fast-langgraph"
 dynamic = ["version"]
 description = "High-performance Rust implementation of LangGraph components"
-authors = [{ name = "Neul Labs", email = "hello@neul.ai" }]
+authors = [{ name = "Dipankar Sarkar", email = "me@dipankar.name" }]
+maintainers = [{ name = "Neul Labs", email = "hello@neul.ai" }]
 license = { text = "MIT" }
 readme = "README.md"
 requires-python = ">=3.9"
@@ -29,7 +30,8 @@ dependencies = [
 [project.urls]
 Homepage = "https://github.com/neul-labs/fast-langgraph"
 Repository = "https://github.com/neul-labs/fast-langgraph"
-Documentation = "https://github.com/neul-labs/fast-langgraph/tree/main/docs"
+Documentation = "https://github.com/neul-labs/fast-langgraph/tree/main/documentation/docs"
+Issues = "https://github.com/neul-labs/fast-langgraph/issues"
 
 [project.optional-dependencies]
 dev = [
