--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -130,12 +130,9 @@ jobs:
           CURRENT_VERSION: ${{ steps.cargo_version.outputs.current }}
         run: |
           echo "Cargo.toml version changed from ${PREVIOUS_VERSION} to ${CURRENT_VERSION}. Triggering publish workflow."
-          cat > body.json <<EOF
-{"ref":"$REF_NAME","inputs":{"publish_to_pypi":"true"}}
-EOF
           curl -sSf -X POST \
             -H "Accept: application/vnd.github+json" \
             -H "Authorization: Bearer $GH_TOKEN" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
             https://api.github.com/repos/$REPO/actions/workflows/publish.yml/dispatches \
-            -d @body.json
+            -d '{"ref":"'"$REF_NAME"'","inputs":{"publish_to_pypi":"true"}}'
