--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -191,11 +191,49 @@ jobs:
           name: wheels-sdist
           path: dist
 
+  # Verify wheels before publishing
+  verify:
+    name: Verify Distribution
+    runs-on: ubuntu-latest
+    needs: [linux, musllinux, windows, macos, sdist]
+    steps:
+      - name: Download all artifacts
+        uses: actions/download-artifact@v4
+        with:
+          pattern: wheels-*
+          path: dist
+          merge-multiple: true
+
+      - name: List distribution files
+        run: ls -lh dist/
+
+      - name: Verify wheel contents
+        run: |
+          echo "Verifying wheel files..."
+          for f in dist/*.whl; do
+            if [ -f "$f" ]; then
+              echo "Checking $(basename $f)..."
+              unzip -l "$f" | head -10
+              echo "---"
+            fi
+          done
+          echo "Verification complete!"
+
+      - name: Verify sdist contents
+        run: |
+          for f in dist/*.tar.gz; do
+            if [ -f "$f" ]; then
+              echo "Checking sdist $(basename $f)..."
+              tar -tzf "$f" | head -20
+              echo "---"
+            fi
+          done
+
   # Publish to PyPI
   publish:
     name: Publish to PyPI
     runs-on: ubuntu-latest
-    needs: [linux, musllinux, windows, macos, sdist]
+    needs: [linux, musllinux, windows, macos, sdist, verify]
     permissions:
       id-token: write  # Required for trusted publishing
     environment:
@@ -223,7 +261,7 @@ jobs:
   release:
     name: Create GitHub Release
     runs-on: ubuntu-latest
-    needs: [linux, musllinux, windows, macos, sdist]
+    needs: [linux, musllinux, windows, macos, sdist, verify]
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
     permissions:
       contents: write
